# Smart-PPE-Detection-using-YOLO

./: .gitignore  README.md  app.py  pyproject.toml  requirements.txt  safety_vest_cli.py  safety_vest_web.py
src/: evidence.py  live.py  main.py
web/: index.html
web/static/: app.js  style.css
